some half-baked updates

--- a/cli_config.yaml
+++ b/cli_config.yaml
@@ -3,18 +3,34 @@
 - hosts: all
 
   tasks:
-  - name: Copy git prompt
-    copy:
-      src: ./files/.prompt
-      dest: "/Users/{{ ansible_user_id }}/.prompt"
-      owner: "{{ ansible_user_id }}"
-      group: staff
-      mode: 0644
+    - name: Copy git prompt
+      copy:
+        src: ./files/.zsh_prompt
+        dest: "/Users/{{ ansible_user_id }}/.zsh_prompt"
+        owner: "{{ ansible_user_id }}"
+        group: staff
+        mode: 0644
 
-  - name: Copy bash_profile
-    copy:
-      src: ./files/.bash_profile
-      dest: "/Users/{{ ansible_user_id }}/.bash_profile"
-      owner: "{{ ansible_user_id }}"
-      group: staff
-      mode: 0644
+    - name: Copy zshrc
+      copy:
+        src: ./files/.zshrc
+        dest: "/Users/{{ ansible_user_id }}/.zshrc"
+        owner: "{{ ansible_user_id }}"
+        group: staff
+        mode: 0644
+
+  # - name: Copy git prompt
+  #   copy:
+  #     src: ./files/.prompt
+  #     dest: "/Users/{{ ansible_user_id }}/.prompt"
+  #     owner: "{{ ansible_user_id }}"
+  #     group: staff
+  #     mode: 0644
+
+  # - name: Copy bash_profile
+  #   copy:
+  #     src: ./files/.bash_profile
+  #     dest: "/Users/{{ ansible_user_id }}/.bash_profile"
+  #     owner: "{{ ansible_user_id }}"
+  #     group: staff
+  #     mode: 0644
